<resources>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="create_mood_label">Create new Mood Check-in</string>
  <string name="save_label">Save</string>
  <string name="cancel_label">cancel_label</string>
  <string name="rating_label">Mood rating</string>
  <string name="date_value">Date:</string>
  <string name="mood_rating_value">Mood Rating:</string>
  <string name="progress_report_value">Your progress report</string>
  <string name="completed_text">completed</string>
  <string name="login_failure_message">Unable to sign in with provided credentials</string>
  <string name="display_name_format">Signed in a %s</string>
  <string name="sign_out">Sign out</string>
  <string name="home_title">Home</string>
  <string name="mood_check_in_title">Moods</string>
  <string name="diary_title">Diary</string>
  <string name="favorite_title">Favorites</string>
  <string name="advice_title">Advice</string>
  <string name="open_advice">Want a new advice?</string>
  <string name="advice">Advice</string>
  <string name="open_diary">Navigate to your diary</string>
  <string name="image_description">image of a person meditating</string>
  <string name="advice_description">Meditation is a simple practice available to all, which can reduce stress, increase calmness and clarity and promote happiness. Learning how to meditate is straightforward, and the benefits can come quickly. Here, we offer basic tips to get you started on a path toward greater equanimity, acceptance and joy. Take a deep breath, and get ready to relax.</string>
  <string name="diary_details_label">Diary</string>
  <string name="add_diary_entry_label">Add diary entry.</string>
  <string name="greeting_label">WELCOME BACK TO EL8</string>
  <string name="sign_in_label">Sign in</string>
  <string name="advice_details_header">Let\'s get started</string>
  <string name="mood_check_in_label">Mood Check-in</string>
  <string name="mood_graph_label">Mood Graph</string>
  <string name="advice_label">Advice</string>
  <string name="what_s_around_me_label">What\'s around me</string>
  <string name="my_path_label">My path</string>
  <string name="my_diary_label">My Diary</string>
</resources>