<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/half_dynamic_spacing"
  xmlns:app="http://schemas.android.com/apk/res-auto">



  <TextView
    android:id="@+id/advice"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:maxLines="12"
    android:ellipsize="end"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/image"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:textSize="19sp"
    android:textColor="@color/colorPrimary"
    android:text="@string/advice_description"
    android:layout_margin="@dimen/half_dynamic_spacing"/>

  <ImageButton
    android:id="@+id/favorite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:padding="@dimen/half_static_spacing"
    android:src="@drawable/outline_favorite_24"
    android:background="?android:selectableItemBackgroundBorderless"
    app:layout_constraintTop_toBottomOf="@id/advice"
    app:layout_constraintEnd_toEndOf="parent"/>

  <ImageView
    android:id="@+id/image"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:adjustViewBounds="true"
    android:contentDescription="@string/image_description"
    android:scaleType="fitCenter"
    android:src="@drawable/meditation"
    app:layout_constraintBottom_toTopOf="@id/open_diary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/advice"
    app:layout_constraintWidth_percent="0.8"/>

  <TextView
    android:id="@+id/open_diary_label"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:textColor="@color/colorPrimary"
    android:textSize="15sp"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/open_diary"
    app:layout_constraintTop_toTopOf="@id/open_diary"
    app:layout_constraintBottom_toBottomOf="@id/open_diary"
    android:text="@string/open_diary"/>
  <ImageButton
    android:id="@+id/open_diary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/completed_text"
    android:src="@drawable/diary64"
    android:background="?android:selectableItemBackground"

    android:layout_margin="@dimen/half_static_spacing"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/open_advice"/>

  <TextView
    android:id="@+id/open_advice_label"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textSize="15sp"
    android:textColor="@color/colorPrimary"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/open_advice"
    app:layout_constraintTop_toTopOf="@id/open_advice"
    app:layout_constraintBottom_toBottomOf="@id/open_advice"
    android:layout_margin="@dimen/half_static_spacing"
    android:text="@string/open_advice"/>

  <ImageButton
    android:id="@+id/open_advice"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground"

    android:text="@string/advice"
    android:layout_margin="@dimen/half_static_spacing"
    android:src="@drawable/advice"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="@id/open_diary"
    app:layout_constraintEnd_toEndOf="@id/open_diary"/>


</androidx.constraintlayout.widget.ConstraintLayout>