<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navigation_map"
  app:startDestination="@id/navigation_home">

  <fragment
    android:id="@+id/navigation_home"
    android:name="edu.cnm.deepdive.el8.controller.HomeFragment"
    android:label="@string/dashboard_title"
    tools:layout="@layout/fragment_home">
    <action
      android:id="@+id/open_details"
      app:destination="@id/navigation_mood_details">

      <argument
        android:name="mood_id"
        app:argType="long"
        android:defaultValue="0L"/>
    </action>
    <action
      android:id="@+id/test"
      app:destination="@id/dashboard_frag"/>

  </fragment>

  <fragment
    android:id="@+id/navigation_diary"
    android:name="edu.cnm.deepdive.el8.controller.DiaryFragment"
    android:label="@string/diary_title"
    tools:layout="@layout/fragment_diary"/>

  <fragment
    android:id="@+id/navigation_advice"
    android:name="edu.cnm.deepdive.el8.controller.AdviceFragment"
    android:label="@string/advice_title"
    tools:layout="@layout/fragment_advice"/>
    <action
    android:id="@+id/show_diary"
    app:destination="@id/navigation_diary"/>
  <fragment
    android:id="@+id/navigation_mood_check_in_details"
    android:name="edu.cnm.deepdive.el8.controller.MoodCheckInDetailsFragment"/>


  <fragment
    android:id="@+id/navigation_favorite"
    android:name="edu.cnm.deepdive.el8.controller.FavoritesFragment"
    android:label="@string/favorite_title"
    tools:layout="@layout/fragment_favorites"/>

  <fragment
    android:id="@+id/dashboard_frag"
    android:name="edu.cnm.deepdive.el8.controller.DashBoardFragment"
    tools:layout="@layout/fragment_dashboard"/>
  <action
    android:id="@+id/show_moods_dashboard"
    app:destination="@id/navigation_mood_details"/>

  <action
    android:id="@+id/show_favorites_dashboard"
    app:destination="@id/navigation_favorite"/>


  <dialog
    android:id="@+id/navigation_mood_details"
    android:name="edu.cnm.deepdive.el8.controller.MoodCheckInDetailsFragment"
    tools:layout="@layout/fragment_mood_check_in_details">

    <argument
      android:name="mood_id"
      app:argType="long"
      android:defaultValue="0L"/>
  </dialog>


</navigation>