<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.MainActivity">


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <ImageView
          android:layout_width="82dp"
          android:layout_height="82dp"
          android:padding="@dimen/half_static_spacing"
          android:layout_alignParentEnd="true"
          android:src="@drawable/path"
          />


        <TextView
          android:id="@+id/dashboard"
          android:text="@string/my_path_label"
          android:textAlignment="viewEnd"
          android:textStyle="bold"
          android:autoSizeMaxTextSize="30sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="#673AB7"
          android:textSize="20sp"/>

      </RelativeLayout>
      <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins">

        <androidx.cardview.widget.CardView
          android:id="@+id/mood_dashboard"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_columnWeight="1"
          android:layout_rowWeight="1"
          app:cardElevation="6dp"
          app:contentPadding="4dp"
          app:cardCornerRadius="12dp"
          android:layout_margin="12dp">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">


            <ImageView

              android:layout_width="79dp"
              android:layout_height="80dp"
              android:background="?android:selectableItemBackgroundBorderless"
              android:src="@drawable/good"/>

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#673AB7"
              android:textSize="15sp"

              android:text="@string/mood_check_in_label"
              android:layout_marginTop="12dp"/>

          </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
          android:id="@+id/diary_dashboard"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_columnWeight="1"
          android:layout_rowWeight="1"
          app:cardElevation="6dp"
          app:contentPadding="4dp"
          android:background="?android:selectableItemBackgroundBorderless"

          app:cardCornerRadius="12dp"
          android:layout_margin="12dp">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">


            <ImageView
              android:src="@drawable/diary2"
              android:layout_width="80dp"
              android:layout_height="80dp"
              android:contentDescription="TODO"/>

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="12dp"
              android:textColor="#673AB7"
              android:textSize="15sp"
              android:text="@string/my_diary_label"/>

          </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_columnWeight="1"
          android:layout_rowWeight="1"
          app:cardElevation="6dp"
          app:contentPadding="4dp"
          android:background="?android:selectableItemBackgroundBorderless"
          app:cardCornerRadius="12dp"
          android:layout_margin="12dp">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">


            <ImageView
              android:src="@drawable/graph"
              android:layout_width="80dp"
              android:layout_height="80dp"
              />

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="12dp"
              android:text="@string/mood_graph_label"
              android:textColor="#673AB7"
              />
          </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
          android:id="@+id/advice_dashboard"
          android:background="?android:selectableItemBackgroundBorderless"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_columnWeight="1"
          android:layout_rowWeight="1"
          app:cardElevation="6dp"
          app:contentPadding="4dp"
          app:cardCornerRadius="12dp"
          android:layout_margin="12dp">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">


            <ImageView
              android:src="@drawable/advice"
              android:layout_width="80dp"
              android:layout_height="80dp"/>

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="12dp"
              android:textColor="#673AB7"
              android:textSize="15sp"
              android:text="@string/advice_label"/>
          </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_columnWeight="1"
          android:layout_rowWeight="1"
          app:cardElevation="6dp"
          app:contentPadding="4dp"
          android:background="?android:selectableItemBackgroundBorderless"
          app:cardCornerRadius="12dp"
          android:layout_margin="12dp">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">


            <ImageView
              android:src="@drawable/location"
              android:layout_width="80dp"
              android:layout_height="80dp"/>

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="12dp"
              android:textColor="#673AB7"
              android:textSize="15sp"
              android:text="@string/what_s_around_me_label"/>

          </LinearLayout>
        </androidx.cardview.widget.CardView>

      </GridLayout>


    </LinearLayout>
  </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>